fixing font color on mobile

--- a/src/common/styles/Login.module.css
+++ b/src/common/styles/Login.module.css
@@ -18,6 +18,7 @@
   width: 100%;
   height: 2rem;
   border: none;
+  color: var(--secondary);
   border-bottom: 1.5px solid var(--secondary);
   background-color: transparent;
   font-weight: 600;
